--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,154 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:rgba(159, 145, 145, 0.51);
 }
-
+html{
+  background-color:rgb(169, 147, 147);
+}
+.inputCLass{
+  width:fit-content;
+  height:fit-content;
+  text-align: center;
+  font-weight:900;
+  border-style:none;
+  display: inline-block;
+  margin-left:20px;
+}
+*{
+  margin:0px;
+  padding:0px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#nav{
+  background-color: rgba(255, 183, 0, 0.805);
+  color:white;
+  text-shadow: 2px 2px 3px white;
+  height:10vh;
+  font-size:2rem;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 2px 2px 10px 2px rgba(159, 145, 145, 0.51);
+}
+#create{
+  background-color:inherit;
+  box-shadow: 1px 1px 2px 2px rgba(255, 183, 0, 0.805);
+  border-color:rgba(255, 183, 0, 0.805);
+  height:4rem;
+  width:8rem;
+  color:white;
+  cursor: pointer;
+  font-size: larger;
+}
+#mainDiv{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top:2rem;
+}
+#title{
+  align-self:center;
+  margin-left : 45%;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top:8%;
+}
+#forms{
+  background-color:rgba(159, 145, 145, 0.51);
+  height:100vh;
+  width:100vw;
+}
+#formELement{
+  height:100px;
+  width:200px;
+  outline:none;
+  box-shadow: 1px 2px 12px 5px  rgb(255, 238, 0);
+  font-size:larger;
+  border-style:none;
+  text-align:center;
+  transition-property:height,width;
+  transition-duration: 0.5s;
+  color:black;
+  background-color: rgb(252, 210, 0);
+}
+#formID{
+  margin-left:30%;
+  color:orange;
+  text-shadow:2px 2px 12px orange;
+  font-size:64px;
+}
+#formSub{
+  height:100px;
+  width:100px;
+  font-size:32px;
+  transition-property:height,width;
+  transition-duration:0.5s;
+  cursor: pointer;
+  border-style: none;
+  color:black;
+  position:relative;
+  opacity:0;
+  margin-left:46.5%;
+  bottom:4em;
+  box-shadow: 1px 2px 12px 5px  rgb(255, 238, 0);
+  background-color: rgb(252, 210, 0);
+}
+#toDo{
+  color:black;
+  text-decoration: none;
+}
+#formSub:hover{
+  height:120px;
+  width:120px;
+  transition-property:height,width;
+  transition-duration:0.5s;
+}
+#formSub:active{
+  height:120px;
+  width:120px;
+  transition-property:height,width;
+  transition-duration:0.5s;
+}
+#formELement:hover{
+  height:120px;
+  width:220px;
+  transition-property:height,width;
+  transition-duration: 0.5s;
+}
+#link{
+  text-decoration:none;
+  color:black;
+}
+#log{
+  position:fixed;
+  top:15px;
+  right:15px;
+  cursor:pointer;
+  font-size: 32px;
+  background-color: rgb(252, 210, 0);
+  border-color:rgba(255, 166, 0, 0.89);
+  box-shadow:2px 2px 10px 2px orange;
+}
+#formELement:active{
+  outline-style: solid;
+  outline-color:  rgba(159, 145, 145, 0.51);
+  height:120px;
+  width:220px;
+  transition-property:height,width;
+  transition-duration: 0.5s;
+}
+#footer{
+  position: fixed;
+  bottom:0;
+  text-align: center;
+  width:100%;
+  color:white;
+  font-weight:900;
 }
